--- a/music_api/templates/base.html
+++ b/music_api/templates/base.html
@@ -108,6 +108,9 @@
     <script src="{% static 'js/animation_home.js' %}"></script>
     <script src="{% static 'js/scrolling.js' %}"></script>
     <script src="{% static 'vendor/gsap/ScrollToPlugin.min.js' %}"></script>
+    <script src="{% static 'vendor/gsap/CustomBounce.min.js' %}"></script>
+    <script src="{% static 'vendor/gsap/CustomEase.min.js' %}"></script>
+
 </body>
 
 </html>
