--- a/music_api/templates/home.html
+++ b/music_api/templates/home.html
@@ -41,20 +41,25 @@
   <h2 class="mb-4 text-center popular-h2 shadow-sm">Топ-Артисты</h2>
   <div class="d-flex justify-content-between align-items-center mb-3"></div>
 
-  <div class="row mb-3">
-  <div class="col-auto">
-    <div id="trending-genre-buttons"
-         class="btn-group"
-         role="group"
-         aria-label="Жанры">
+  <div class="trending-genre-carousel-wrapper mb-3">
+    <div class="d-flex overflow-auto" id="trending-genre-container" style="gap: 8px; padding-bottom: 8px;">
+
     </div>
   </div>
-</div>
   <div class="row row-cols-1 row-cols-lg-2 g-4" id="trending-container"></div>
+
 
   <h2 id="year2026-chart" class="mb-4 mt-5 text-center popular-h2 shadow-sm">
     Актуальный чарт
   </h2>
+
+  <div class="year-genre-carousel-wrapper mb-3">
+    <div class="d-flex overflow-auto" id="year-genre-container" style="gap: 8px; padding-bottom: 8px;">
+
+    </div>
+  </div>
+
+  </div>
 
   <div class="row mb-3">
     <div class="col-auto">
