--- a/music_api/templates/base.html
+++ b/music_api/templates/base.html
@@ -55,7 +55,8 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"
                     style="font-size: 0.75rem; padding: 0.125rem 0.25rem; margin-top: 7.4px;">
-                    <span class="navbar-toggler-icon" style="width: 2.7em; height: 2.7em; background-size: 70%; filter: invert(1);"></span>
+                    <span class="navbar-toggler-icon"
+                        style="width: 2.7em; height: 2.7em; background-size: 70%; filter: invert(1);"></span>
                 </button>
 
                 <div class="collapse navbar-collapse" id="navbarNav">
@@ -102,15 +103,14 @@
 
     <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
     <script src="{% static 'vendor/gsap/gsap.min.js' %}"></script>
-    <script src="{% static 'js/music_search.js' %}"></script>
     <script src="{% static 'js/track-animations.js' %}"></script>
-    <script src="{% static 'js/trending.js' %}"></script>
     <script src="{% static 'js/animation_home.js' %}"></script>
     <script src="{% static 'js/scrolling.js' %}"></script>
+    <script src="{% static 'js/trending.js' %}"></script>
+    <script src="{% static 'js/music_search.js' %}"></script>
     <script src="{% static 'vendor/gsap/ScrollToPlugin.min.js' %}"></script>
     <script src="{% static 'vendor/gsap/CustomBounce.min.js' %}"></script>
     <script src="{% static 'vendor/gsap/CustomEase.min.js' %}"></script>
 
 </body>
-
 </html>
