--- a/music_api/templates/home.html
+++ b/music_api/templates/home.html
@@ -3,6 +3,7 @@
 {% block title %}Главная – RubySound.fm{% endblock %}
 
 {% block popular %}
+
 <section id="popular-block" class="container my-5">
   <h1 class="visually-hidden">Поиск и прослушивание музыки онлайн — тренды и чарты 2026</h1>
 
@@ -39,35 +40,24 @@
   </div>
 
   <h2 class="mb-4 text-center popular-h2 shadow-sm">Топ-Артисты</h2>
-  <div class="d-flex justify-content-between align-items-center mb-3"></div>
 
-  <div class="trending-genre-carousel-wrapper mb-3">
-    <div class="d-flex overflow-auto" id="trending-genre-container" style="gap: 8px; padding-bottom: 8px;">
-
-    </div>
+  <div class="trending-genre-carousel-wrapper mb-2">
+    <div class="d-flex overflow-auto" id="trending-genre-container" style="gap: 8px; padding-bottom: 8px;"></div>
   </div>
+
   <div class="row row-cols-1 row-cols-lg-2 g-4" id="trending-container"></div>
 
-
-  <h2 id="year2026-chart" class="mb-4 mt-5 text-center popular-h2 shadow-sm">
+  <h2 id="year2026-chart" class="mb-4  text-center popular-h2 shadow-sm">
     Актуальный чарт
   </h2>
 
-  <div class="year-genre-carousel-wrapper mb-3">
-    <div class="d-flex overflow-auto" id="year-genre-container" style="gap: 8px; padding-bottom: 8px;">
-
-    </div>
+  <div class="year-genre-carousel-wrapper mb-2">
+    <div class="d-flex overflow-auto" id="year-genre-container" style="gap: 8px; padding-bottom: 8px;"> </div>
   </div>
 
-  </div>
-
-  <div class="row mb-3">
-    <div class="col-auto">
-      <div id="genre-buttons" class="btn-group" role="group" aria-label="Жанры"></div>
-    </div>
-  </div>
   <div id="year2025-container" class="row row-cols-2 row-cols-md-3 row-cols-lg-5 g-3"></div>
 
   <script type="module" src="{% static 'js/year2025.js' %}"></script>
+
 </section>
 {% endblock %}
