--- a/music_api/templates/base.html
+++ b/music_api/templates/base.html
@@ -111,6 +111,7 @@
     <script src="{% static 'vendor/gsap/ScrollToPlugin.min.js' %}"></script>
     <script src="{% static 'vendor/gsap/CustomBounce.min.js' %}"></script>
     <script src="{% static 'vendor/gsap/CustomEase.min.js' %}"></script>
+    <script src="{% static 'js/scrollbutton.js' %}"></script>
 
 </body>
 </html>
