--- a/music_api/templates/base.html
+++ b/music_api/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" xmlns="http://www.w3.org/1999/html">
 {% load static %}
 
 <head>
@@ -112,6 +112,8 @@
     <script src="{% static 'vendor/gsap/CustomBounce.min.js' %}"></script>
     <script src="{% static 'vendor/gsap/CustomEase.min.js' %}"></script>
     <script src="{% static 'js/scrollbutton.js' %}"></script>
+    <script src="{% static 'js/card_search_animation.js' %}"></script>
+
 
 </body>
 </html>
