--- a/music_api/templates/base.html
+++ b/music_api/templates/base.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru" xmlns="http://www.w3.org/1999/html">
-{% load static %}
+{% load static compress %}
 
 <head>
     <meta charset="UTF-8">
@@ -17,15 +17,20 @@
     <meta property="og:image" content="{% static 'images/og-cover.jpg' %}">
     <meta property="og:locale" content="ru_RU">
     <link rel="canonical" href="{{ request.build_absolute_uri }}">
-    <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static 'css/custom.css' %}" rel="stylesheet">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Boldonse&family=Play:wght@400;700&family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="{% static 'images/musicico.ico' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+    {% compress css %}
+    <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/custom.css' %}" rel="stylesheet">
+    {% endcompress %}
+
+    <link rel="icon" type="image/x-icon" href="{% static 'images/musicico.ico' %}">
 
     <script type="application/ld+json">
     {
@@ -101,19 +106,21 @@
         </div>
     </footer>
 
+    {% compress js %}
     <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
     <script src="{% static 'vendor/gsap/gsap.min.js' %}"></script>
+    <script src="{% static 'vendor/gsap/ScrollToPlugin.min.js' %}"></script>
+    <script src="{% static 'vendor/gsap/CustomBounce.min.js' %}"></script>
+    <script src="{% static 'vendor/gsap/CustomEase.min.js' %}"></script>
+
     <script src="{% static 'js/track-animations.js' %}"></script>
     <script src="{% static 'js/animation_home.js' %}"></script>
     <script src="{% static 'js/scrolling.js' %}"></script>
     <script src="{% static 'js/trending.js' %}"></script>
     <script src="{% static 'js/music_search.js' %}"></script>
-    <script src="{% static 'vendor/gsap/ScrollToPlugin.min.js' %}"></script>
-    <script src="{% static 'vendor/gsap/CustomBounce.min.js' %}"></script>
-    <script src="{% static 'vendor/gsap/CustomEase.min.js' %}"></script>
     <script src="{% static 'js/scrollbutton.js' %}"></script>
     <script src="{% static 'js/card_search_animation.js' %}"></script>
-
+    {% endcompress %}
 
 </body>
 </html>
