--- a/music_api/static/css/custom.css
+++ b/music_api/static/css/custom.css
@@ -228,6 +228,7 @@ main {
 .box-info p {
     font-size: 1.2em;
     font-weight: 300;
+    color: var(--color-text-dark);
 }
 
 .django_span,
@@ -303,6 +304,7 @@ main {
 .genre-btn {
     background-color: var(--color-card-bg-light) !important;
     color: var(--color-primary) !important;
+    font-weight: 500;
 }
 
 .genre-btn:hover {
