modules n new structure update

--- a/music_api/static/css/custom.css
+++ b/music_api/static/css/custom.css
@@ -320,12 +320,13 @@ main {
 
     .logo-font img {
         margin-left: 3vh;
+        width: 67px;
+        height: 67px;
     }
 
     .custom-navbar {
         padding-bottom: 1.4vh;
     }
-
 
     .about-h2,
     .popular-h2 {
