--- a/music_api/templates/base.html
+++ b/music_api/templates/base.html
@@ -128,6 +128,7 @@
     <!-- Модули поиска и UI-специфичные скрипты -->
     <script src="{% static 'js/UI/scrollbutton.js' %}"></script>
     <script src="{% static 'js/UI/scrolling.js' %}"></script>
+    <script src="{% static 'js/UI/search_button_scroll.js' %}"></script>
 
     <!-- Утилиты -->
     <script src="{% static 'js/utils/utils.js' %}"></script>
