--- a/music_api/templates/base.html
+++ b/music_api/templates/base.html
@@ -52,7 +52,7 @@
 <body class="d-flex flex-column min-vh-100">
     <header>
         <nav class="navbar-content navbar navbar-expand-lg custom-navbar fixed-top">
-            <div class="container">
+            <div class="container-fluid">
                 <a class="d-flex align-items-center justify-content-start navbar-brand logo-font" href="/">
                     <img src="{% static 'images/musicheadphonelogo.svg' %}" alt="Logo" class="img-fluid me-2 logo-img">
                     <span class="logo-text d-sm-inline">RubySound.fm</span>
