--- a/music_api/templates/home.html
+++ b/music_api/templates/home.html
@@ -43,7 +43,7 @@
 
  <div class="carousel-wrapper position-relative mb-2">
   <button class="scroll-left btn btn-danger btn-sm position-absolute top-50 start-0 translate-middle-y z-3 d-none d-md-block">&lt;</button>
-  <div class="d-flex overflow-auto" id="trending-genre-container" style="gap: 8px; padding-bottom: 8px;"></div>
+  <div class="d-flex overflow-auto gap-2 pb-2" id="trending-genre-container"></div>
   <button class="scroll-right btn btn-danger btn-sm position-absolute top-50 end-0 translate-middle-y z-3 d-none d-md-block">&gt;</button>
 </div>
 
@@ -55,7 +55,7 @@
 
 <div class="carousel-wrapper position-relative mb-2">
   <button class="scroll-left btn btn-danger btn-sm position-absolute top-50 start-0 translate-middle-y z-3 d-none d-md-block">&lt;</button>
-  <div class="d-flex overflow-auto" id="year-genre-container" style="gap: 8px; padding-bottom: 8px;"></div>
+  <div class="d-flex overflow-auto gap-2 pb-2" id="year-genre-container"></div>
   <button class="scroll-right btn btn-danger btn-sm position-absolute top-50 end-0 translate-middle-y z-3 d-none d-md-block">&gt;</button>
 </div>
 
