--- a/music_api/static/css/custom.css
+++ b/music_api/static/css/custom.css
@@ -31,10 +31,6 @@ body {
     padding: 0;
 }
 
-main {
-    zoom: 0.96;
-}
-
 .custom-navbar {
     background-color: var(--color-bg);
     padding-top: 0.1vh;
@@ -93,7 +89,6 @@ main {
     color: rgba(245, 245, 245, 0.906);
     padding: 3px 8px;
     border: 1px solid var(--color-primary);
-    transition: all var(--transition-speed) ease;
 }
 
 .custom-button:hover {
@@ -315,6 +310,22 @@ main {
 .genre-btn:hover {
     background-color: var(--color-primary) !important;
     color: var(--color-text-light) !important;
+}
+
+.custom-toggler-icon {
+    width: 1.5em;
+    height: 1.5em;
+    background-size: 80%;
+    filter: invert(1);
+    display: inline-block;
+}
+
+.input-search-icon {
+    padding-left: 30px;
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="%23dc3030"><circle cx="10" cy="10" r="6"/><line x1="14" y1="14" x2="20" y2="20" stroke="%23dc3030" stroke-width="2"/></svg>');
+    background-repeat: no-repeat;
+    background-position: 10px center;
+    background-size: 16px;
 }
 
 @media (max-width: 575.98px) {
