style: implement dual-stage logo animation with 3D rotation and slide-in effects

--- a/music_api/templates/base.html
+++ b/music_api/templates/base.html
@@ -112,6 +112,7 @@
     <script src="{% static 'vendor/gsap/ScrollToPlugin.min.js' %}"></script>
     <script src="{% static 'vendor/gsap/CustomBounce.min.js' %}"></script>
     <script src="{% static 'vendor/gsap/CustomEase.min.js' %}"></script>
+    <script src="{% static 'vendor/gsap/SplitText.min.js' %}"></script>
 
     <!-- Анимации и визуальные эффекты -->
     <script src="{% static 'js/animation/track-animations.js' %}"></script>
